# leetcode

./: .editorconfig  .gitignore  .rules  Cargo.toml  README.md  flake.nix  leetcode.toml  pyproject.toml
.cursor/rules/: leetcode-solutions.mdc
.zed/: settings.json
python/solutions/: p1007_minimum_domino_rotations_for_equal_row.py  p1128_number_of_equivalent_domino_pairs.py  p1295_find_numbers_with_even_number_of_digits.py  p1550_three_consecutive_odds.py  p1920_build_array_from_permutation.py  p2071_maximum_number_of_tasks_you_can_assign.py  p2094_finding_3_digit_even_numbers.py  p2302_count_subarrays_with_score_less_than_k.py  p2434_using_a_robot_to_print_the_lexicographically_smallest_string.py  p2918_minimum_equal_sum_of_two_arrays_after_replacing_zeros.py  p2962_count_subarrays_where_max_element_appears_at_least_k_times.py  p3335_total_characters_in_string_after_transformations_i.py  p3337_total_characters_in_string_after_transformations_ii.py  p3341_find_minimum_time_to_reach_last_room_i.py  p3342_find_minimum_time_to_reach_last_room_ii.py  p3343_count_number_of_balanced_permutations.py  p3392_count_subarrays_of_length_three_with_a_condition.py  p3403_find_the_lexicographically_largest_string_from_the_box_i.py  p3423_maximum_difference_between_adjacent_elements_in_a_circular_array.py  p3442_maximum_difference_between_even_and_odd_frequency_i.py  p3445_maximum_difference_between_even_and_odd_frequency_ii.py  p3446_sort_matrix_by_diagonals.py  p3527_find_the_most_common_response.py  p3528_unit_conversion_i.py  p3529_count_cells_in_overlapping_horizontal_and_vertical_substrings.py  p3530_maximum_profit_from_valid_topological_order_in_dag.py  p3531_count_covered_buildings.py  p3532_path_existence_queries_in_a_graph_i.py  p3533_concatenated_divisibility.py  p3534_path_existence_queries_in_a_graph_ii.py  p3536_maximum_product_of_two_digits.py  p3537_fill_a_special_grid.py  p3548_equal_sum_grid_partition_ii.py  p3576_transform_array_to_all_equal_elements.py  p3577_count_the_number_of_computer_unlocking_permutations.py  p3578_count_partitions_with_max_min_difference_at_most_k.py  p3579_minimum_steps_to_convert_string_with_operations.py  p386_lexicographical_numbers.py  p790_domino_and_tromino_tiling.py  p838_push_dominoes.py  (+1 more)
rust/solutions/: Cargo.toml  avoid_flood_in_the_city.rs  build_an_array_with_stack_operations.rs  calculate_money_in_leetcode_bank.rs  check_if_any_element_has_prime_frequency.rs  check_if_digits_are_equal_in_string_after_operations_i.rs  compute_alternating_sum.rs  container_with_most_water.rs  count_no_zero_pairs_that_sum_to_n.rs  count_prime_gap_balanced_subarrays.rs  count_special_triplets.rs  divide_a_string_into_groups_of_size_k.rs  find_all_k_distant_indices_in_an_array.rs  find_maximum_area_of_a_triangle.rs  find_the_minimum_amount_of_time_to_brew_potions.rs  find_triangular_sum_of_an_array.rs  find_weighted_median_node_in_tree.rs  generate_tag_for_video_caption.rs  inverse_coin_change.rs  largest_triangle_area.rs  longest_binary_subsequence_less_than_or_equal_to_k.rs  longest_subsequence_with_non_zero_bitwise_xor.rs  make_array_elements_equal_to_zero.rs  max_difference_you_can_get_from_changing_an_integer.rs  maximum_difference_between_increasing_elements.rs  maximum_product_of_first_and_last_elements_of_a_subsequence.rs  maximum_tastiness_of_candy_basket.rs  minimize_the_maximum_difference_of_pairs.rs  minimum_adjacent_swaps_to_alternate_parity.rs  minimum_deletions_to_make_string_k_special.rs  minimum_increments_to_equalize_leaf_paths.rs  minimum_score_triangulation_of_polygon.rs  minimum_steps_to_convert_string_with_operations.rs  next_greater_numerically_balanced_number.rs  number_of_laser_beams_in_a_bank.rs  p1.rs  p119.rs  p1450.rs  p149.rs  p1561.rs  (+35 more)
rust/update/: Cargo.toml  main.rs
rust/utils/: update.rs
src/: count-special-triplets.rs  find-weighted-median-node-in-tree.rs  generate-tag-for-video-caption.rs  lib.rs  minimize-the-maximum-difference-of-pairs.rs  minimum-steps-to-convert-string-with-operations.rs  p1388.rs  p149.rs  p1557.rs  p1641.rs  p1860.rs  p2148.rs  p2181.rs  p2266.rs  p2278.rs  p232.rs  p2540.rs  p2549.rs  p2555.rs  p2708.rs  p2860.rs  p3142.rs  p3153.rs  p3174.rs  p3176.rs  p3177.rs  p3396.rs  p416.rs  p441.rs  p705.rs  p918.rs  p977.rs  update.rs
src/solutions/: check-if-any-element-has-prime-frequency.rs  count-prime-gap-balanced-subarrays.rs  divide-a-string-into-groups-of-size-k.rs  find-all-k-distant-indices-in-an-array.rs  find-maximum-area-of-a-triangle.rs  inverse-coin-change.rs  kth-smallest-path-xor-sum.rs  longest-binary-subsequence-less-than-or-equal-to-k.rs  max-difference-you-can-get-from-changing-an-integer.rs  maximum-difference-between-increasing-elements.rs  maximum-product-of-first-and-last-elements-of-a-subsequence.rs  minimum-adjacent-swaps-to-alternate-parity.rs  minimum-deletions-to-make-string-k-special.rs  minimum-increments-to-equalize-leaf-paths.rs  sum-of-k-mirror-numbers.rs  two-sum.rs
