[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p149"
path = "src/p149.rs"

[[bin]]
name = "p232"
path = "src/p232.rs"

[[bin]]
name = "p441"
path = "src/p441.rs"

[[bin]]
name = "p705"
path = "src/p705.rs"

[[bin]]
name = "p918"
path = "src/p918.rs"

[[bin]]
name = "p1641"
path = "src/p1641.rs"

[[bin]]
name = "p1860"
path = "src/p1860.rs"

[[bin]]
name = "p2148"
path = "src/p2148.rs"

[[bin]]
name = "p2540"
path = "src/p2540.rs"

[[bin]]
name = "p2549"
path = "src/p2549.rs"

[[bin]]
name = "p3127"
path = "src/p3127.rs"

[[bin]]
name = "p3142"
path = "src/p3142.rs"

[[bin]]
name = "p3144"
path = "src/p3144.rs"

[[bin]]
name = "p3153"
path = "src/p3153.rs"
