[project]
name = "leetcode"
version = "0.2.0"
description = "Leetcode solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sortedcontainers>=2.4.0",
]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
python_files = "python/solutions/*.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "ty>=0.0.1a1",
]
